mi proyecto de starWars

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,6 +1,6 @@
 body {
-    background-image: url("https://e.rpp-noticias.io/xlarge/2023/04/26/102810_1420506.jpg");
-    background-repeat: no-repeat;
+    background-image: url("https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/media/image/2018/06/que-orden-ver-peliculas-star-wars.jpg?tf=1200x");
+    background-repeat: repeat;
     background-size: cover;
     background-color: black ;
 }
